--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -852,7 +852,7 @@ be covered in the Verification and Validation document.}
 		\\ Team member: Yuvraj Randhawa
 		
 		\item Skill: \textbf{Software Architecture and Structure}
-		\\ Rational: Having a sound software structure will increase development efficicy, simplicity and organization. With topic knowledge in this area, software management and testing will be made easy saving time and effort for developers.
+		\\ Rational: Having a sound software structure will increase development efficiency, simplicity and organization. With topic knowledge in this area, software management and testing will be made easy saving time and effort for developers.
 		\\ Team member: Bassel Rezkalla
 		
 		
