--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -154,12 +154,6 @@ Date 2 & 1.1 & Notes\\
 
 ~\newpage
 
-
-\section{The Purpose of the Project}
-\subsection{The User Business or Background of the Project Effort}
-\subsection{Goals of the Project}
-
-
 \section{Project Drivers}
 \subsection{The Purpose of the Project}
   \subsubsection{The User Business or Background of the Project Effort}
@@ -246,8 +240,76 @@ Below is a glossary of terms, acronyms and abbreviations used by stakeholders in
 N/A
 \section{Functional Requirements}
 \subsection{The Scope of the Work}
+\subsubsection{The Current Situation}
+N/A
+\subsubsection{The Context of the Work}
+N/A
+\subsubsection{Work Partitioning}
+N/A
 \subsection{Business Data Model and Data Directory}
+N/A
 \subsection{The Scope of the Product}
+\subsubsection{Product Boundary}
+N/A
+\subsubsection{Use cases}
+
+\begin{itemize}
+	\item View posted workout routine 
+	\begin{enumerate}
+		\item View other user's fitness progress
+		\item Add Personal Workout List
+		\item View workout Author
+		\item Review workout
+	\end{enumerate}
+	
+	\item Browse Workout routines
+	\begin{enumerate}
+		\item Filter routines
+	\end{enumerate}
+	
+	\item View Another User's Profile
+	\begin{enumerate}
+		\item View user's created routines
+	\end{enumerate}
+	
+	\item Create User Profile
+	\begin{enumerate}
+		\item Setup profile description
+		\item Setup attributes
+	\end{enumerate}
+	
+	\item Edit User Profile
+	
+	\item Start workout routine
+	\begin{enumerate}
+		\item Track exercises in-progress
+		\item Track personal Quantifiers
+		\item Update current routine
+	\end{enumerate}
+	
+	
+	\item Create workout routine
+	\begin{enumerate}
+		\item Post workout routine
+		\item Categorize routine
+		\item Add workout length details
+		\item Add exercise 
+		\begin{enumerate}
+			\item Add Quantifier
+			\item Add Workout Descriptions
+		\end{enumerate}
+	\end{enumerate}
+	
+	\item Edit Routine
+	\item Remove Routine
+	\item View Workout List
+\end{itemize}
+
+\subsubsection{Use case Diagram}
+\includegraphics[scale=0.5]{srs_usecase_diagram_routines}
+\newpage
+\includegraphics[scale=0.5]{srs_usecase_diagram_profiles}
+
 \subsection{Functional Requirements}
 \noindent \begin{itemize}
 
@@ -553,7 +615,7 @@ be covered in the Verification and Validation document.}
         Users can optionally specify their gender, age, and race. Gender and age will be used to cater the content for individuals feeds.
     \end{itemize}
 
-\subsection{Compliance Requirements}
+\subsection{Legal Requirements}
   \subsubsection{Legal Compliance Requirements}
     \noindent \begin{itemize}
       \item[NFR\refstepcounter{nfrnum}\thenfrnum:]
@@ -600,174 +662,6 @@ be covered in the Verification and Validation document.}
 
 \end{itemize}
 
-
-\section{Use cases}
-
-\begin{itemize}
-	\item View posted workout routine 
-	\begin{enumerate}
-		\item Fitness Enthusiasts - Anyone interested in exploring other fitness
-		routines, creating their own routines, and tracking their own personal
-		progression towards goals.
-		\item Personal Trainers - Olympian provides the ideal platform for trainers to
-		share routines and goals with their clients.
-		\item Fitness Advertisers - One avenue of monetization that Olympian could take
-		is running advertisements. Although these advertisements could fall into any
-		category, the largest stakeholders will be Fitness Advertisers,
-		as the users of Olympian will be heavily involved with fitness, and thus most
-		likely to buy fitness products.
-	\end{enumerate} 
-	
-	\section{Project Constraints}
-	\subsection{Mandated Constraints} 
-	\subsection{Naming Conventions and Terminology}
-	\subsection{Relevant Facts and Assumptions}
-	
-	\section{General System Description}
-	
-	This section provides general information about the system.  It identifies the
-	interfaces between the system and its environment, describes the user
-	characteristics and lists the system constraints.  \plt{This text can likely be
-		borrowed verbatim.}
-	
-	\plt{The purpose of this section is to provide general information about the
-		system so the specific requirements in the next section will be easier to
-		understand. The general system description section is designed to be
-		changeable independent of changes to the functional requirements documented in
-		the specific system description. The general system description provides a
-		context for a family of related models.  The general description can stay the
-		same, while specific details are changed between family members.}
-	
-	\subsection{System Context}
-	
-	\plt{Your system context will include a figure that shows the abstract view of
-		the software.  Often in a scientific context, the program can be viewed
-		abstractly following the design pattern of Inputs $\rightarrow$ Calculations
-		$\rightarrow$ Outputs.  The system context will therefore often follow this
-		pattern.  The user provides inputs, the system does the calculations, and then
-		provides the outputs to the user.  The figure should not show all of the
-		inputs, just an abstract view of the main categories of inputs (like material
-		properties, geometry, etc.).  Likewise, the outputs should be presented from
-		an abstract point of view.  In some cases the diagram will show other external
-		entities, besides the user.  For instance, when the software product is a
-		library, the user will be another software program, not an actual end user.
-		If there are system constraints that the software must work with external
-		libraries, these libraries can also be shown on the System Context diagram.
-		They should only be named with a specific library name if this is required by
-		the system constraint.}
-	
-	\begin{figure}[h!]
-		\begin{center}
-			\includegraphics[width=0.6\textwidth]{SystemContextFigure}
-			\caption{System Context}
-			\label{Fig_SystemContext} 
-		\end{center}
-	\end{figure}
-	
-	\plt{For each of the entities in the system context diagram its responsibilities
-		should be listed.  Whenever possible the system should check for data quality,
-		but for some cases the user will need to assume that responsibility.  The list
-		of responsibilities should be about the inputs and outputs only, and they
-		should be abstract.  Details should not be presented here.  However, the
-		information should not be so abstract as to just say ``inputs'' and
-		``outputs''.  A summarizing phrase can be used to characterize the inputs.
-		For instance, saying ``material properties'' provides some information, but it
-		stays away from the detail of listing every required properties.}
-\end{itemize}
-	\begin{itemize}
-		\item User Responsibilities:
-		\begin{itemize}
-			\item 
-		\end{itemize}
-		\item \progname{} Responsibilities:
-		\begin{itemize}
-			\item Detect data type mismatch, such as a string of characters instead of a
-			floating point number
-			\item 
-		\end{itemize}
-	\end{itemize}
-	
-	\subsection{System Constraints}
-	
-	\plt{System constraints differ from other type of requirements because they
-		limit the developers' options in the system design and they identify how the
-		eventual system must fit into the world. This is the only place in the SRS
-		where design decisions can be specified.  That is, the quality requirement for
-		abstraction is relaxed here.  However, system constraints should only be
-		included if they are truly required.}
-	
-	\subsection{System Scope}
-	
-	
-	\section{Functional Requirements}
-	\subsection{The Scope of the Work}
-	\subsubsection{The Current Situation}
-	N/A
-	\subsubsection{The Context of the Work}
-	N/A
-	\subsubsection{Work Partitioning}
-	N/A
-	\subsection{The Scope of the Product}
-	\subsubsection{Use cases}
-	
-	\begin{itemize}
-		\item View posted workout routine 
-		\begin{enumerate}
-			\item View other user's fitness progress
-			\item Add Personal Workout List
-			\item View workout Author
-			\item Review workout
-		\end{enumerate}
-		
-		\item Browse Workout routines
-		\begin{enumerate}
-			\item Filter routines
-		\end{enumerate}
-		
-		\item View Another User's Profile
-		\begin{enumerate}
-			\item View user's created routines
-		\end{enumerate}
-		
-		\item Create User Profile
-		\begin{enumerate}
-			\item Setup profile description
-			\item Setup attributes
-		\end{enumerate}
-		
-		\item Edit User Profile
-		
-		\item Start workout routine
-		\begin{enumerate}
-			\item Track exercises in-progress
-			\item Track personal Quantifiers
-			\item Update current routine
-		\end{enumerate}
-		
-		
-		\item Create workout routine
-		\begin{enumerate}
-			\item Post workout routine
-			\item Categorize routine
-			\item Add workout length details
-			\item Add exercise 
-			\begin{enumerate}
-				\item Add Quantifier
-				\item Add Workout Descriptions
-			\end{enumerate}
-		\end{enumerate}
-		
-		\item Edit Routine
-		\item Remove Routine
-		\item View Workout List
-	\end{itemize}
-	
-	\subsubsection{Use case Diagram}
-	\includegraphics[scale=0.5]{srs_usecase_diagram_routines}
-	\newpage
-	\includegraphics[scale=0.5]{srs_usecase_diagram_profiles}
-	
-	
 	\section{Traceability Matrices and Graphs}
 	
 	The purpose of the traceability matrices is to provide easy references on what
