--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -246,7 +246,7 @@ N/A
 N/A
 \subsubsection{Work Partitioning}
 \begin{center}
-\begin{tabular}{ |c|c|c| } 
+\begin{tabular}{ |p{5cm}|p{5cm}|p{5cm}| } 
  \hline
  \textbf{Event Name} & \textbf{Input and Output} & \textbf{Summary} \\ 
  Creating a Program  & Program Creation \(input\) & Finalizing all program creation inputs from user  \\ 
