Add work partitioning (#34)
* Add work partitioning

* Update docs/SRS/SRS.tex

Co-authored-by: Yuvi Randhawa <yuvirandhawa@Yuvis-MacBook-Pro-3.local>
Co-authored-by: Bassel <basselrezkalla@gmail.com>

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -245,7 +245,23 @@ N/A
 \subsubsection{The Context of the Work}
 N/A
 \subsubsection{Work Partitioning}
-N/A
+\begin{center}
+\begin{tabular}{ |p{5cm}|p{5cm}|p{5cm}| } 
+ \hline
+ \textbf{Event Name} & \textbf{Input and Output} & \textbf{Summary} \\ 
+ Creating a Program  & Program Creation \(input\) & Finalizing all program creation inputs from user  \\ 
+ Leaving a review on a user's post & Writing a review \(input\) & Commenting and proving a numeric value for program value \\
+ Searching for a Program & Program Search \(input\) & Searching and browsing for a specific program or type of program based on search parameters  \\ 
+ Sorting search results & Results sorted and displayed \(output\) & Sorting search results in a relevant way that is useful to the user \\ 
+ Adding performed sets and reps for exercise & Entering rep and set information \(input\) & Tracking workout information by adding sets and reps performed during exercise \\ 
+ Registering an account & Creating a new account \(input\) & This creates a new user and appends it to the database \\ 
+ Adding program to profile  & Appending a program to personal profile \(input\) & Users can add programs they find to their profiles to use a later time or immediately \\ 
+ Logging into account & Entering account information \(input\) & This authenticates and authorizes the user to access their account  \\ 
+ Providing users with suggested programs and workouts & Generating and displaying programs and workouts tailored to individual users \(output\) & Using specific algorithms that find programs that suit the users needs \\ 
+ Providing user with statistics & Generating and displaying statistics \(output\) & This will show users statistics they wouldn't otherwise know about. \\ 
+ \hline
+\end{tabular}
+\end{center}
 \subsection{Business Data Model and Data Directory}
 N/A
 \subsection{The Scope of the Product}
