--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -799,7 +799,7 @@ be covered in the Verification and Validation document.}
 			\begin{itemize}
 				\item \textbf{Issue 1:} Users may have discomfort using an app to track their workouts over the traditional pen and paper method. The business event of tracking personal quantifiers is of concern with this issue.
 				
-				\item \textbf{Issue 2:} It may be unfavourable to users with existing programs and workout data to migrate to a new application
+				\item \textbf{Issue 2:} It may be unfavourable to users with existing programs and workout data to migrate to a new application.
 				
 				\item \textbf{Issue 3:} Users personal methods of working out - various quirks and features - may not be covered by the app's program creation.
 				
