--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -801,7 +801,7 @@ be covered in the Verification and Validation document.}
 				
 				\item \textbf{Issue 2:} It may be unfavourable to users with existing programs and workout data to migrate to a new application.
 				
-				\item \textbf{Issue 3:} Users personal methods of working out - various quirks and features - may not be covered by the app's program creation.
+				\item \textbf{Issue 3:} Users' personal methods of working out - various quirks and features - may not be covered by the app's program creation capabilities.
 				
 				\item \textbf{Issue 4:} There is a concern with the app’s compatibility with various devices. Integral UI/UX features of the app such has haptics, pop ups, dragging features, may not work with various devices hindering the overall experience for some users.
 				
