--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -812,7 +812,7 @@ be covered in the Verification and Validation document.}
 		
 				\noindent TeamBuildr
 				\begin{itemize}
-				\item Exercise programming app for large groups used at a professional level. Used for teams, specifically at a high level. There is no present social aspect. Paid service. 
+				\item TeamBuildr is an exercise programming app for large groups used at a professional level. Used for teams, specifically at a high level. There is no present social aspect. It is also a paid service.
 				\item Program creation is a very complex process. This app has a solution that has been tried and tested by multiple users at a high level. 
 				\end{itemize}
 				
