--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -818,7 +818,7 @@ be covered in the Verification and Validation document.}
 				
 				\noindent JEFIT
 				\begin{itemize}
-				\item App that lets you create and track workouts. No user generated content but has paid template programs. Social aspect that lets you post progress pictures. 
+				\item JEFIT lets you create and track workouts. It does not feature user-generated content but has paid template programs. It has functionality allowing users to post progress pictures. 
 				\item Could be used as a foundation for adding required features if acquired.
 				\end{itemize}
 		
