--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -826,7 +826,7 @@ be covered in the Verification and Validation document.}
 		
 				\noindent One Rep Max Calculator
 				\begin{itemize}
-				\item The npm library one-rep-max, can be used to satisfy the requirements of providing user statistics. The library offers multiple recognized methods of calculating one rep max. 
+				\item The npm library one-rep-max, can be used to satisfy the requirements of providing user statistics. The library offers multiple recognized methods of calculating users' maximum weight for one repetition. 
 				\item Event: Track Personal Quantifiers 
 				\end{itemize}
 				
