--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -830,7 +830,7 @@ be covered in the Verification and Validation document.}
 				\item Event: Track Personal Quantifiers 
 				\end{itemize}
 				
-				\noindent Content Based Recommender 
+				\noindent Content-Based Recommender 
 				\begin{itemize}
 				\item The npm library content-based-recommender can help display recommended content for the user based on user inputted parameters 
 				\item This addresses the business event "filter routines". 
