--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -832,7 +832,7 @@ be covered in the Verification and Validation document.}
 				
 				\noindent Content-Based Recommender 
 				\begin{itemize}
-				\item The npm library content-based-recommender can help display recommended content for the user based on user inputted parameters 
+				\item The npm library content-based-recommender can help display recommended content for the user based on user inputted parameters.
 				\item This addresses the business event "filter routines". 
 				\end{itemize}
 		
