--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -836,7 +836,7 @@ be covered in the Verification and Validation document.}
 				\item This addresses the business event "filter routines". 
 				\end{itemize}
 		
-			\subsubsection{Products that can be Copied}
+			\subsubsection{Products that can be copied}
 		
 				\noindent Exercise Directory
 				\begin{itemize}
