--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -840,7 +840,7 @@ be covered in the Verification and Validation document.}
 		
 				\noindent Exercise Directory
 				\begin{itemize}
-				\item Provides a bulk directory of various exercises that can be directly copied as there is no legal ownership of an exercise.
+				\item Exercise Directory provides a bulk directory of various exercises that can be directly copied as there is no legal ownership of an exercise.
 				\end{itemize}
 		
 				\noindent HyperHuman API 
