--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -853,10 +853,10 @@ be covered in the Verification and Validation document.}
 			Not applicable.
 		\subsection{Tasks}
 			\begin{itemize}
-			\item Determine which technologies will be used for the creation of this project (frontend framework, server language)
-			\item  app UX wire-frames
-			\item  app UI design mockups
-			\item  app UI components and testing using front end technology
+			\item Determine which technologies will be used for the creation of this project (frontend framework, server language).
+			\item  Design UX wire-frames for the application.
+			\item  Design UI design mockups for the application.
+			\item  Design UI components and testing for the application with front-end technology.
 			\item  Create skeleton of API
 			\item  Revise requirement documents.
 			\item  Implement test report
