--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -862,7 +862,7 @@ be covered in the Verification and Validation document.}
 			\item  Implement test report
 			\end{itemize}
 		\subsection{Migration to the New Product}
-			The product will be rolled out to the Apple App store first and then added to the Google play store after it has run without issue on the app store.
+			The product will be deployed to the Apple App store first, then it will be added to the Google Play store once it has run without issue on the app store.
 			This project is new and so no transition period is relevant.
 		\subsection{Risks}
 			\begin{itemize}
