--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -863,7 +863,7 @@ be covered in the Verification and Validation document.}
 			\end{itemize}
 		\subsection{Migration to the New Product}
 			The product will be deployed to the Apple App store first, then it will be added to the Google Play store once it has run without issue on the app store.
-			This project is new and so no transition period is relevant.
+			This project is new, so no transition period is relevant.
 		\subsection{Risks}
 			\begin{itemize}
 			\item User data breach. If users data is leaked then this would have damaging ramifications for our reputation and our userbase.
