--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -866,7 +866,7 @@ be covered in the Verification and Validation document.}
 			This project is new, so no transition period is relevant.
 		\subsection{Risks}
 			\begin{itemize}
-			\item User data breach. If users data is leaked then this would have damaging ramifications for our reputation and our userbase.
+			\item User data breach. If users' data is leaked, there would be damaging ramifications on our reputation and our userbase.
 			\item Failure of content moderation. Olympian is a social media application and as such is susceptible to being used for nefarious and hateful purposes. This is why content moderation will be vital in running this application.
 			\end{itemize}
 		\subsection{Costs}
