--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -884,7 +884,7 @@ be covered in the Verification and Validation document.}
 			\item The product must include an optional networking feature where users can view the growth of similar users and track the steps taken to produce those improvements.
 			\end{itemize}
 		\subsection{Ideas for Solutions}
-			The product should be built using React Native along with an expressjs backend and utilizing the Google Firestore suite for app management including database and storage. Pricing was collected with these services in mind and they fullfil the needs of the product.
+			The product should be built using React Native along with an Express.js backend and utilizing the Google Firestore suite for app management including database and storage. Pricing was collected with these services in mind and they fullfil the needs of the product.
 
 	
 	
