Docs/srs/open issues (#32)
* first half of open issues

* forced project issues onto new page

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

* Update docs/SRS/SRS.tex

Co-authored-by: Dimitri Tsampiras <dimitri.tsampiras@gmail.com>
Co-authored-by: Matthew_McCracken <mccrackenmatthew73@yahoo.ca>
Co-authored-by: Bassel <basselrezkalla@gmail.com>

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -807,36 +807,100 @@ be covered in the Verification and Validation document.}
 	general definitions, data definitions, instance models, likely changes, and
 	assumptions on each other. Figure~\ref{Fig_RTrace} shows the dependencies of
 	instance models, requirements, and data constraints on each other.
+
+	\newpage
 	
 	\section{Project Issues}
-	\subsection{Open Issues}
-	\subsection{Off the Shelf Solutions}
-	\subsection{New Problems}
-	\subsection{Tasks}
-	\subsection{Migration to the New Product}
-    The product will be rolled out to the Apple App store first and then added to the Google play store after it has run without issue on the app store.
-    This project is new and so no transition period is relevant.
-  \subsection{Risks}
-    \begin{itemize}
-      \item User data breach. If users data is leaked then this would have damaging ramifications for our reputation and our userbase.
-      \item Failure of content moderation. Olympian is a social media application and as such is susceptible to being used for nefarious and hateful purposes. This is why content moderation will be vital in running this application.
-    \end{itemize}
-  \subsection{Costs}
-    \begin{itemize}
-      \item The cost of keeping a server that is always responsive to client requests. This has an estimated cost of \$25 per month.
-      \item The cost of utilizing a database that can handle many reads and writes quickly. This has an estimated cost of \$10 per month.
-      \item The cost of an Individual Developer Account needed to host all apps on the Apple App Store. This will cost USD\$99.
-    \end{itemize}
-  \subsection{User Documentation and Training}
-    N/A
-  \subsection{Waiting Room}
-    \begin{itemize}
-      \item The product must allow users to track their diet information and recommend diets based on calory intake.
-      \item The product must algorithmically produce a "Recommended" feed filled with workouts selected for users based on their habits and interests.
-      \item The product must include an optional networking feature where users can view the growth of similar users and track the steps taken to produce those improvements.
-    \end{itemize}
-  \subsection{Ideas for Solutions}
-    The product should be built using React Native along with an expressjs backend and utilizing the Google Firestore suite for app management including database and storage. Pricing was collected with these services in mind and they fullfil the needs of the product.
+		\subsection{Open Issues}
+			\begin{itemize}
+				\item \textbf{Issue 1:} Users may have discomfort using an app to track their workouts over the traditional pen and paper method. The business event of tracking personal quantifiers is of concern with this issue.
+				
+				\item \textbf{Issue 2:} It may be unfavourable to users with existing programs and workout data to migrate to a new application.
+				
+				\item \textbf{Issue 3:} Users' personal methods of working out - various quirks and features - may not be covered by the app's program creation capabilities.
+				
+				\item \textbf{Issue 4:} There is a concern with the app’s compatibility with various devices. Integral UI/UX features of the app such has haptics, pop-ups, and dragging features may not work with various devices - hindering the overall experience for some users.
+				
+			\end{itemize}
+		
+		\subsection{Off the Shelf Solutions}
+			\subsubsection{Ready Made Products}
+		
+				\noindent TeamBuildr
+				\begin{itemize}
+				\item TeamBuildr is an exercise programming app for large groups used at a professional level. Used for teams, specifically at a high level. There is no present social aspect. It is also a paid service.
+				\item Program creation is a very complex process. This app has a solution that has been tried and tested by multiple users at a high level. 
+				\end{itemize}
+				
+				\noindent JEFIT
+				\begin{itemize}
+				\item JEFIT lets you create and track workouts. It does not feature user-generated content but has paid template programs. It has functionality allowing users to post progress pictures. 
+				\item JEFIT could be used as a foundation for adding required features if acquired.
+				\end{itemize}
+		
+			\subsubsection{Reusable Components}
+		
+				\noindent One Rep Max Calculator
+				\begin{itemize}
+				\item The npm library one-rep-max, can be used to satisfy the requirements of providing user statistics. The library offers multiple recognized methods of calculating users' maximum weight for one repetition. 
+				\item Event: Track Personal Quantifiers 
+				\end{itemize}
+				
+				\noindent Content-Based Recommender 
+				\begin{itemize}
+				\item The npm library content-based-recommender can help display recommended content for the user based on user inputted parameters.
+				\item This addresses the business event "filter routines". 
+				\end{itemize}
+		
+			\subsubsection{Products that can be copied}
+		
+				\noindent Exercise Directory
+				\begin{itemize}
+				\item Exercise Directory provides a bulk directory of various exercises that can be directly copied as there is no legal ownership of an exercise.
+				\end{itemize}
+		
+				\noindent HyperHuman API 
+				\begin{itemize}
+				\item HyperHuman API offers pre-built workout programs that can be used as basic templates. This is especially useful in the beginning stages of the app where user generated content is at a low. 
+				\item This addresses the business event "browse programs". 
+				\end{itemize}
+		
+		\subsection{New Problems}
+			Not applicable.
+		\subsection{Tasks}
+			\begin{itemize}
+			\item Determine which technologies will be used for the creation of this project (frontend framework, server language).
+			\item  Design UX wire-frames for the application.
+			\item  Design UI design mockups for the application.
+			\item  Design UI components and testing for the application with front-end technology.
+			\item  Create skeleton of API
+			\item  Revise requirement documents.
+			\item  Implement test report
+			\end{itemize}
+		\subsection{Migration to the New Product}
+			The product will be deployed to the Apple App store first, then it will be added to the Google Play store once it has run without issue on the app store.
+			This project is new, so no transition period is relevant.
+		\subsection{Risks}
+			\begin{itemize}
+			\item User data breach. If users' data is leaked, there would be damaging ramifications on our reputation and our userbase.
+			\item Failure of content moderation. Olympian is a social media application and as such is susceptible to being used for nefarious and hateful purposes. This is why content moderation will be vital in running this application.
+			\end{itemize}
+		\subsection{Costs}
+			\begin{itemize}
+			\item The cost of keeping a server that is always responsive to client requests. This has an estimated cost of \$25 per month.
+			\item The cost of utilizing a database that can handle many reads and writes quickly. This has an estimated cost of \$10 per month.
+			\item The cost of an Individual Developer Account needed to host all apps on the Apple App Store. This will cost USD\$99.
+			\end{itemize}
+		\subsection{User Documentation and Training}
+			N/A
+		\subsection{Waiting Room}
+			\begin{itemize}
+			\item The product must allow users to track their diet information and recommend diets based on calory intake.
+			\item The product must algorithmically produce a "Recommended" feed filled with workouts selected for users based on their habits and interests.
+			\item The product must include an optional networking feature where users can view the growth of similar users and track the steps taken to produce those improvements.
+			\end{itemize}
+		\subsection{Ideas for Solutions}
+			The product should be built using React Native along with an Express.js backend and utilizing the Google Firestore suite for app management including database and storage. Pricing was collected with these services in mind and they fullfil the needs of the product.
 
 	
 	
